Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta1, 6.2.0, 6.2
-
None
-
Windows, cmake build
-
-
be3e6c1b41d26047b49fe23b0bd3de031ba9d873 (qt/qttools/dev) 17a4f5047c0931d60ad4a0106bc1f30e214320cc (qt/qttools/6.2)
Description
Qt Rhi plugin renderer needs Qt6ShaderTools dll which is not deployed with windeployqt tool, and causes a runtime error at start up.
Also, the resulting error message can be misleading : "Unable to find renderer plugin for rhi"; even though the plugin rhirenderer.dll is successfully deployed in the binary directory,
Attachments
Issue Links
- duplicates
-
QTBUG-96579 windeployqt does not copy Qt6ShaderTools.dll which is needed by Qt3D RHI renderer plugin
-
- Closed
-