Deploy QtShaderTools as a dependency of renderers plugins (Qt3D)

Qt3D's rhirenderer depends on QtShaderTools. We need to reflect this
dependency in windeployqt too.

Pick-to: 6.2
Fixes: QTBUG-96521
Change-Id: I3175180e5cdc702d5720d4f591774b01c22a543d
Reviewed-by: André de la Rocha <andre.rocha@qt.io>